# personakit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: quickstart.py
examples/personas/: falls_nurse.yaml
src/personakit/: __init__.py  agent.py  cost.py  errors.py  loaders.py  matching.py  observability.py  prompt_builder.py  registry.py  result.py  session.py  specialist.py  testing.py  tools.py  web.py
src/personakit/examples/: __init__.py  code_reviewer.py  contract_reviewer.py  falls_nurse.py  fintech_reviewer.py  math_tutor.py  scrum_master.py  support_triage.py
src/personakit/providers/: __init__.py  anthropic.py  base.py  litellm.py  mock.py  openai.py
tests/: test_agent.py  test_cost.py  test_loaders.py  test_matching.py  test_observability.py  test_prompt_builder.py  test_providers_litellm.py  test_session.py  test_specialist.py  test_streaming.py  test_tool_loop.py  test_tools.py  test_web_tools.py
