[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personakit"
version = "0.1.7"
description = "A declarative framework for building role-based LLM agents — code reviewers, compliance officers, clinical triage, support triage. Not a personality classifier; an agent builder. Persona, frameworks, probes, red flags, and themes as data; you get a typed, cited, safety-aware agent."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Majidul Islam", email = "contact.majidul.islam@gmail.com" }]
maintainers = [{ name = "Majidul Islam", email = "contact.majidul.islam@gmail.com" }]
keywords = [
    "llm",
    "agent",
    "agent-builder",
    "agents",
    "ai",
    "persona",
    "specialist",
    "specialist-agents",
    "role-based-agents",
    "domain-expert",
    "prompt-engineering",
    "openai",
    "anthropic",
    "litellm",
    "claude",
    "gpt",
    "chatgpt",
    "declarative",
    "yaml",
    "structured-output",
    "safety",
    "guardrails",
    "customer-support",
    "fintech",
    "aml",
    "code-review",
    "code-reviewer",
    "scrum",
    "product-manager",
    "project-management",
    "clinical",
    "legal",
    "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.25",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
litellm = ["litellm>=1.40"]
yaml = ["pyyaml>=6.0"]
all = ["personakit[openai,anthropic,litellm,yaml]"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Majidul17068/personakit"
Repository = "https://github.com/Majidul17068/personakit"
Issues = "https://github.com/Majidul17068/personakit/issues"
Changelog = "https://github.com/Majidul17068/personakit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/personakit"]

[tool.hatch.build.targets.sdist]
include = ["src/personakit", "tests", "assets", "README.md", "LICENSE", "CHANGELOG.md", "ROADMAP.md"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"src/personakit/examples/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*", "litellm.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
